# slower

./: .gitignore  .pylintrc  README.md  pyproject.toml  run.sh
proto/: server_model.proto  server_segment.proto
slower/client/: app.py  client.py  numpy_client.py  typing.py
slower/client/grpc/: connection.py  grpc_client.py
slower/client/proxy/: client_proxy.py  (+1 more)
slower/common/: __init__.py  constants.py  parameter.py  serde.py  typing.py
slower/proto/: server_model_pb2.py  server_model_pb2.pyi  server_model_pb2_grpc.py  server_segment_pb2.py  server_segment_pb2.pyi  server_segment_pb2_grpc.py
slower/server/: app.py  common.py  server.py
slower/simulation/: app.py
slwr/client/: app.py  client.py  client_app.py  numpy_client.py
slwr/common/: __init__.py  constants.py  parameter.py  serde.py  typing.py  utils.py
slwr/proto/: server_model_pb2.py  server_model_pb2.pyi  server_model_pb2_grpc.py
slwr/server/: app.py  server.py
usage/: README.md
usage/cifar10/: README.md  centralized.py  cifar_client.py  common.py  constants.py  fl.py  models.py  server_segment.py  sl.py
usage/cifar10_extended/: .env  README.md  common.py  constants.py  cv_dataset.py  fl.py  models.py  sl.py  sl_client.py  sl_server_segment.py
usage/common/: helper.py  model.py
usage/mnist/: README.md  centralized.py  common.py  constants.py  fl.py  mnist_client.py  models.py  run_client.py  run_server.py  server_segment.py  sl.py
usage/yelp_review/: README.md  centralized.py  common.py  compression.py  constants.py  fl.py  models.py  server_segment.py  sl.py  yelp_client.py
(+64 files in other folders)
